--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,19 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency> 
+      <groupId>org.junit.jupiter</groupId> 
+      <artifactId>junit-jupiter</artifactId> 
+      <version>5.10.0</version> 
+      <scope>test</scope> 
+    </dependency>
+
   </dependencies>
+
+
+
+
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
@@ -69,6 +81,7 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> <version>3.2.5</version> </plugin>
       </plugins>
     </pluginManagement>
   </build>
